src/main/resources/tests/Semantics/bad/modeIn.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure TestIn(X : in Integer) is
begin
   X := X + 1; -- Doit générer une erreur de compilation.
end TestIn;
